Minor refactor, fixed deprecated code and typos